# idc-bot

./: Cargo.toml  run.sh
src/: channel.rs  main.rs  permissions.rs
src/voice/: broadcaster.rs  broadcaster_creation_error.rs  mod.rs  prepared_message.rs  sending_message_error.rs  voice_channel_manager.rs  voice_channel_manager_creation_error.rs  voice_move_action.rs
src/voice/err/: message_error.rs  mod.rs
